fix feedlist display in IE7 (enable collapsed cats)

--- a/tt-rss.css
+++ b/tt-rss.css
@@ -1508,6 +1508,6 @@ a.helpLinkPic img {
 	display : none;
 }
 
-#feedCatHolder {
+li.feedCatHolder {
 	display : inline;
 }
